IE11 Bugfix (boxes were not centered in widescreen mode, they were left aligned.)

--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,7 @@ body {
 .l-main--content-box {
     max-width: 380px; /* calc( 36rem * 0.66 ); TODO: convert to SASS, so can precalculate these values. */
     margin: 0 auto;
+    overflow: hidden; /* IE11 needs that, otherwise the boxes will be left aligned instead of centered. */
 }
 
 @media screen and (min-width: 980px) and (max-height: 800px) {
